--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "gulp-uglify-es": "^2.0.0",
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1"
+  },
+  "dependencies": {
+    "swiper": "^6.5.6"
   }
 }
