--- a/package.json
+++ b/package.json
@@ -27,7 +27,5 @@
     "jquery": "^3.5.1",
     "normalize.css": "^8.0.1"
   },
-  "dependencies": {
-    "swiper": "^6.5.6"
-  }
+  "dependencies": {}
 }
